--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,13 @@ android {
 ext {
     room_version = "2.4.1"
     retrofit_version = "2.9.0"
+    retrofit_coroutine_adapter_version = "0.9.2"
     ml_text_recognition_version = "16.0.0"
     image_cropper_version = "2.8.0"
     lifecycle_version = "2.5.0-alpha02"
     picasso_version = "2.5.2"
     dotenv_version = "5.2.2"
+    hilt_version = "2.40.5"
 }
 
 dependencies {
@@ -57,6 +59,8 @@ dependencies {
     //RETROFIT
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutine_adapter_version"
+
 
     //IMAGE_CROPPER
     implementation "com.theartofdev.edmodo:android-image-cropper:$image_cropper_version"
@@ -69,6 +73,10 @@ dependencies {
 
     //DOTENV
     implementation "io.github.cdimascio:java-dotenv:$dotenv_version"
+
+    //HILT
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
